--- a/public/index.html
+++ b/public/index.html
@@ -3,10 +3,21 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <script type="text/javascript" src="https://dapi.kakao.com/v2/maps/sdk.js?appkey=3c70762ac3e65b60c8501c34cb1c3257"></script>
   <title>Kakao Map</title>
 </head>
 <body>
   <div id="root"></div>
+
+  <script>
+    fetch("/env.json")
+      .then(response => response.json())
+      .then(env => {
+        const kakaoApiKey = env.REACT_APP_KAKAO_MAP_API_KEY;
+        const script = document.createElement("script");
+        script.src = `https://dapi.kakao.com/v2/maps/sdk.js?appkey=${kakaoApiKey}`;
+        script.async = true;
+        document.head.appendChild(script);
+      });
+  </script>
 </body>
 </html>
